...
    final profileAsync = ref.watch(patientProfileProvider);

    return Scaffold(
      backgroundColor: const Color(0xFFF8FAFC),
      appBar: CustomAppBar(
        title: 'Edit Profil',
        // subtitle: 'Kelola pengingat obat Anda',
        showBackButton: true,
        onBackPressed: () => context.pop(),
      ),
      body: profileAsync.when(
        data: (profile) => _buildProfileForm(profile),
        loading: () => const Center(child: CircularProgressIndicator()),
...
