...
                    fontSize: 36,
                    fontWeight: FontWeight.bold,
                  ),
                ),
                SizedBox(height: 2),
                Text(
                  'Kalender Obat',
                  style: TextStyle(
                    color: Color(0xFF525252),
                    fontSize: 18,
                    // fontWeight: FontWeight.w600,
                  ),
                ),
...
